# webstudy

./: README.md
jasub/CSS/step4/: 3_4_positionTODO.html
jasub/CSS/step6/: 5_2_TRDelay.html
jasub/CSS/step8/: flex.html
jasub/HTML/step1/: 1_H.html  2_p.html
jasub/HTML/step2/: 1_list.html  3_media.html
jasub/HTML/step3/: 1_hyperlink.html  fin_step3.html
jasub/HTML/step4/: 1_table.html  2_table_span.html  homework.html
jasub/HTML/step5/: 1_form.html  practice.html
jasub/makepage/: index.html
jasub/selfhtml/: index.html
jasub/selfjavascript/: 3_3_inputoutput.js  C3_changetype.html  C5_function.html  C6_array.html  index.html  var.html
makepage1/: index.html  index.js  style.css
softsquared/1week/: csstest.css  csstest.html  homework1.md  homework2.md  homework3.md  index.html  jstest.js
softsquared/2week/: ES6javascript.js
softsquared/3week/: test.html  test.js
stacks/backend/: OOP.py  pyproject.toml
stacks/backend/config/: settings.py
stacks/backend/houses/: admin.py  models.py
stacks/backend/houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pet_allowed.py
stacks/backend/users/: admin.py  models.py
stacks/backend/users/migrations/: 0001_initial.py
step1/: 2_p.html
study/jquery/: etc4.html
study/js/: 2_typeof.html  4_function.html  8_stringClass.html
study/refresh-javascript/: 01_variable.js  02_arrowfunction.js  03_Exports&Imports.js  04_Class.js  05_Class&Methods.js  06_spread.js  07_destructuring.js  08_reference.js  09_Array_function.js  index.html  test.js
(+330 files in other folders)
