[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["LimJaeSub <76646095+LimJaeSub@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
